--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,12 +10,23 @@ html lang="en"
     = csrf_meta_tags
 
   body
-    = alert_box alert, "alert"
-    = alert_box notice
-
     .row
-      h1.logo Freeshelf
-    .row#main
-      = yield
+      .small-12.columns
+        h1.logo
+          = link_to "Freeshelf", root_path
+    .row
+      .medium-2.columns
+        ul.main-nav
+          li = link_to "Home", root_path
+          li = link_to "Add a Book", new_book_path
+          li.divider
+          li = link_to "Sign up", signup_path
+          li = link_to "Login", login_path
+          = content_for(:nav)
+      .medium-10.columns
+        .row
+          = alert_box alert, "alert"
+          = alert_box notice
+          = yield
 
     = javascript_include_tag "application"
