--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -3,7 +3,9 @@
     h1 Sign up as a new user
     = simple_form_for @user do |f|
       = f.input :name
-      = f.input :email
+      = f.input :email do
+        = f.input_field :email, type: :email
+        = f.hint "Must be a valid email", style: "display: none"
       .row
         .medium-6.columns
           = f.input :password
