--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,8 +16,7 @@
  */
 
 @import url(http://fonts.googleapis.com/css?family=Bubblegum+Sans);
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,400italic,600italic,700italic);
-
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,700,600);
 
 body {
   margin-top: 30px;
