--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -47,7 +47,7 @@
 // We use these to control various global styles
 $body-bg: #f5f5f5;
 $body-font-color: #202020;
-$body-font-family: "Source Sans Pro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$body-font-family: "Open Sans", sans-serif;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
 
