--- a/app/views/books/_form.html.slim
+++ b/app/views/books/_form.html.slim
@@ -8,6 +8,7 @@
     .medium-6.columns
       = form.input :cover, :as => :file
       = form.input :cover_cache, :as => :hidden
+      = form.input :remote_cover_url, :as => :text
     .medium-6.columns
       = image_tag(@book.cover_url) if @book.cover?
 
