Added ability to upload documents

--- a/app/views/books/_form.html.slim
+++ b/app/views/books/_form.html.slim
@@ -2,6 +2,7 @@
   = form.input :title
   = form.input :author
   = form.input :url
+  = form.input :document
   = form.input :publish_year
   = form.input :description, input_html: {rows: 10}
   .row
