--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -13,7 +13,7 @@
             span.publish-year = @book.publish_year
         .small-3.columns
           p.right
-            = link_to "Link to book", @book.url
+            = link_to "Link to book", @book.link
     .description = simple_format(@book.description)
 
   .medium-3.columns
