Added tagging to books

--- a/app/views/books/_form.html.slim
+++ b/app/views/books/_form.html.slim
@@ -4,6 +4,7 @@
   = form.input :url
   = form.input :document
   = form.input :publish_year
+  = form.input :tag_list, :hint => "Separate tags with commas."
   = form.input :description, input_html: {rows: 10}
   .row
     .medium-6.columns
