--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -14,6 +14,10 @@
         .small-3.columns
           p.right
             = link_to "Link to book", @book.link
+    p.tags
+      - @book.tags.each do |tag|
+        span.secondary.radius.label>
+          = link_to tag, tag_books_path(tag.name)
     .description = simple_format(@book.description)
 
   .medium-3.columns
