--- a/app/views/books/_books.html.slim
+++ b/app/views/books/_books.html.slim
@@ -1,3 +1,6 @@
+- if books.respond_to?(:current_page)
+  = paginate books
+
 ul.large-block-grid-3.medium-block-grid-2.small-block-grid-1.book-list
   - books.each do |book|
     li.book
@@ -12,3 +15,4 @@ ul.large-block-grid-3.medium-block-grid-2.small-block-grid-1.book-list
             span.secondary.radius.label>
               = link_to tag, tag_books_path(tag.name)
         .description = simple_format(book.description)
+
