Users can unfavorite items
Also added ability to favorite tags

--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -4,7 +4,8 @@
       h2
         = @book.title
         - if current_user
-          small< = link_to "Edit", edit_book_path(@book)
+          small<> = link_to "Edit", edit_book_path(@book)
+          = favorite_link_to @book
       .row
         .small-9.columns
           p
@@ -15,7 +16,6 @@
           p.right
             = link_to "Link to book", @book.link
     p.tags
-      = favorite_link_to @book
       - @book.tags.each do |tag|
         span.secondary.radius.label>
           = link_to tag, tag_books_path(tag.name)
