--- a/app/views/books/tags.html.slim
+++ b/app/views/books/tags.html.slim
@@ -2,4 +2,5 @@
   .large-12.columns
     h2
       | Books tagged with "#{@tag}"
+      = favorite_link_to @tag
     = render :partial => 'books', :object => @books
