--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,1 +1,1 @@
-$("#favorite-<%= "#{@f_type.downcase}-#{@f_id}" %>").removeClass("fa-star-o").addClass("fa-star").css("color", "gold");
+$("#<%= "#{favorite_id(@favoritable)}" %>").replaceWith("<%= j favorite_link_to(@favoritable) %>");
