--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -4,8 +4,8 @@
       h2
         = @book.title
         - if current_user
-          small<> = link_to "Edit", edit_book_path(@book)
-          = favorite_link_to @book
+          small< = link_to "Edit", edit_book_path(@book)
+          span< = favorite_link_to @book
       .row
         .small-9.columns
           p
