--- a/app/views/books/_books.html.slim
+++ b/app/views/books/_books.html.slim
@@ -1,6 +1,3 @@
-- if books.respond_to?(:current_page)
-  = paginate books, :window => 10, :outer_window => -1
-
 ul.large-block-grid-3.medium-block-grid-2.small-block-grid-1.book-list
   - books.each do |book|
     li.book
@@ -17,4 +14,4 @@ ul.large-block-grid-3.medium-block-grid-2.small-block-grid-1.book-list
         .description = simple_format(book.description)
 
 - if books.respond_to?(:current_page)
-  = paginate books
+  = paginate books, :outer_window => 2
