--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -27,5 +27,5 @@
 .row
   .columns.related-books
     h3 Related books
-    = render :partial => "books", :object => @related_books
+    = render 'books', :books => @related_books
 
