--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,8 +20,12 @@ html lang="en"
           li = link_to "Home", root_path
           li = link_to "Add a Book", new_book_path
           li.divider
-          li = link_to "Sign up", signup_path
-          li = link_to "Login", login_path
+          - if current_user
+            li = link_to "Logged in as #{current_user.name}", "#"
+            li = link_to "Logout", logout_path, :method => :delete
+          - else
+            li = link_to "Sign up", signup_path
+            li = link_to "Login", login_path
           = content_for(:nav)
       .medium-10.columns
         .row
