--- a/app/views/books/_form.html.slim
+++ b/app/views/books/_form.html.slim
@@ -1,4 +1,5 @@
 = simple_form_for book, :html => {:multipart => true} do |form|
+  = form.input :user_id, as: :hidden, input_html: { value: current_user.id } unless @book.title
   = form.input :title
   = form.input :author
   = form.input :url
