Fixed strong parameters issue for tag-only form

--- a/app/views/books/edit_tags.html.slim
+++ b/app/views/books/edit_tags.html.slim
@@ -1,3 +1,3 @@
-= simple_form_for @book do |form|
+= simple_form_for @book, url: edit_tags_book_path(@book), action: 'patch' do |form|
   = form.input :tag_list, :hint => "Separate tags with commas."
   = form.submit
