used a thumb on video index and embeded the video on the show page TODO embed the video in a modal

--- a/app/views/videos/_videos.html.erb
+++ b/app/views/videos/_videos.html.erb
@@ -14,7 +14,7 @@
             </div>
 
           </div>
-            <%= youtube_embed(video.link) %>
+            <%= image_tag video_thumb(video.link) %>
           <% end %>
         </li>
 
