--- a/app/views/books/_form.html.slim
+++ b/app/views/books/_form.html.slim
@@ -5,7 +5,9 @@
   = form.input :url
   = form.input :document
   = form.input :publish_year
-  = form.input :tag_list, :hint => "Separate tags with commas."
+  = label_tag :user_tags, 'Tag list'
+  = text_field_tag :user_tags, @book.tags_from(current_user)
+  small.hint Separate tags with commas.
   = form.input :description, input_html: {rows: 10}
   .row
     .medium-6.columns
