--- a/app/assets/stylesheets/videos.css.scss
+++ b/app/assets/stylesheets/videos.css.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the Videos controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.video_thumb{
+  height: 150px;
+}
