Sorting working on correct pages

--- a/app/views/books/tags.html.slim
+++ b/app/views/books/tags.html.slim
@@ -1,5 +1,5 @@
 .row
-  .large-12.columns
+  .large-12.columns.book_content
     h2
       | Books tagged with "#{@tag}"
       span< = favorite_link_to @tag
