--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -1,5 +1,7 @@
 .row
   .medium-9.columns
+    #edit_tag_modal.reveal-modal data-reveal=''
+    #test
     .book-info
       h2
         = @book.title
@@ -16,10 +18,7 @@
           p.right
             = link_to "Link to book", @book.link
     p.tags
-      - @book.tags.each do |tag|
-        span.secondary.radius.label>
-          = link_to tag, tag_books_path(tag.name)
-      = edit_tag_link_to(@book)
+      = render partial: 'tag_list', locals: { book: @book }
     .description = simple_format(@book.description)
 
   .medium-3.columns
