modal now renders partial

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -34,7 +34,7 @@ html lang="en"
           = alert_box notice
           = yield
   div id="settings-modal" class="reveal-modal" data-reveal=true
-    =="Custom user settings here"
+    == render :partial => 'users/settings'
     .close-reveal-modal
       =="&#215;"
 
