--- a/app/views/books/_form.html.slim
+++ b/app/views/books/_form.html.slim
@@ -1,9 +1,9 @@
 = simple_form_for book, :html => {:multipart => true} do |form|
   = form.input :title
-  = form.input :author
+  = form.input :creator
   = form.input :url
   = form.input :document
-  = form.input :publish_year
+  = form.input :year_created
   = form.input :tag_list, :hint => "Separate tags with commas."
   = form.input :description, input_html: {rows: 10}
   .row
