--- a/app/views/videos/_form.html.erb
+++ b/app/views/videos/_form.html.erb
@@ -3,9 +3,9 @@
 
   <div class="form-inputs">
     <%= f.input :title %>
-    <%= f.input :contributor %>
-    <%= f.input :summary %>
-    <%= f.input :link %>
+    <%= f.input :creator %>
+    <%= f.input :description %>
+    <%= f.input :url %>
     <%= f.input :tag_list, :hint => "Separate tags with commas." %>
   </div>
 
