--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -7,7 +7,7 @@
     </h2>
     <div class="row">
       <div class="small-9 columns">
-        <span class="author"> <%= @video.contributor %></span>
+        <span class="creator"> <%= @video.creator %></span>
       </div>
 
     </div>
@@ -15,10 +15,10 @@
         <% @video.tags.each do |tag| %>
             <%= link_to tag, tag_videos_path(tag.name) %>
         <% end %>
-      <%= simple_format(@video.summary) %>
+      <%= simple_format(@video.description) %>
     </p>
   </div>
   <div class="large-10 columns">
-    <%= video_embed(@video.link) %>
+    <%= video_embed(@video.url) %>
   </div>
 </div>
