--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -2,14 +2,14 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.book-list {
+.content-list {
   .book-cover {
     float: right;
     margin: 0 0 10px 10px;
   }
 }
 
-.book-info {
+.content-info {
   .creator {
     font-style: italic;
   }
