--- a/app/views/books/_books.html.slim
+++ b/app/views/books/_books.html.slim
@@ -1,9 +1,9 @@
-ul.large-block-grid-3.medium-block-grid-2.small-block-grid-1.book-list
+ul.large-block-grid-3.medium-block-grid-2.small-block-grid-1.content-list
   - books.each do |book|
     li.book
       - if book.cover?
         .book-cover = link_to image_tag(book.cover.thumb.url), book
-      .book-info
+      .content-info
         .title = link_to book.title, book
         .creator = book.creator
         .year-created = book.year_created
