--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,14 +18,14 @@ html lang="en"
       .medium-2.columns
         ul.main-nav
           li = link_to "Home", root_path
-          li = link_to "Add a Book", new_book_path
+          li = link_to t('.add_book'), new_book_path
           li.divider
           - if current_user
-            li = link_to "Logged in as #{current_user.name}", "#"
-            li = link_to "Logout", logout_path, :method => :delete
+            li = link_to t('.logged_as', name: current_user.name), "#"
+            li = link_to t('.logout'), logout_path, :method => :delete
           - else
             li = link_to "Sign up", signup_path
-            li = link_to "Login", login_path
+            li = link_to t('.login'), login_path
           = content_for(:nav)
       .medium-10.columns
         .row
