working on tagmailer

--- a/app/views/users/_settings.html.erb
+++ b/app/views/users/_settings.html.erb
@@ -1,2 +1,2 @@
-="hello, put your cool ass code in here, my friends"
-=link_to "Email me!", {action: "new_tag_alert", id: "Erin", "pooping-a-history", "poops"}
+Hello, put your cool ass code in here, my friends
+<%=button_to "Email me!", {action: "send_mail", params: {user: 'Erin', slug: 'hi', tag: 'yo'}} %>
