--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -29,3 +29,28 @@
     h3 Related books
     = render 'books', :books => @related_books
 
+
+h2 Comments
+- @book.comments.each do |comment|
+  p
+    strong Commenter:
+    = comment.commenter
+
+  p
+    strong Comment:
+    = comment.body
+
+h2 Add a comment:
+= form_for([@book, @book.comments.build]) do |f|
+  p
+    = f.label :commenter
+    = f.text_field :commenter
+  p
+    = f.label :body
+    = f.text_area :body
+  p
+    = f.submit
+  p
+
+= link_to 'Back ', books_path
+= link_to 'Edit', edit_book_path(@book)
