--- a/app/views/tag_mailer/new_tag_alert.html.erb
+++ b/app/views/tag_mailer/new_tag_alert.html.erb
@@ -14,7 +14,7 @@
 <br>
 <br>
 <br>
-<p>If you no longer wish to recieve these email alerts, please go to http://www.freeshelf.herokuapp.com
+<p>If you no longer wish to receive these email alerts, please go to http://www.freeshelf.herokuapp.com
   and edit your user settings.</p>
 </body>
 </html>
