--- a/app/views/books/tags.html.slim
+++ b/app/views/books/tags.html.slim
@@ -4,3 +4,7 @@
     span< = favorite_link_to @tag
   .large-12.columns.book_content
     = render 'books', :books => @books
+
+=content_for(:sort_function)
+  #sort_button
+    = render 'layouts/sort_list'
