Tightened up settings

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -25,8 +25,9 @@ html lang="en"
           li.divider
           - if current_user
             li = link_to "Logged in as #{current_user.name}", "#"
-            li = link_to "Logout", logout_path, :method => :delete
             li = link_to "Settings", '#', data: {:'reveal-id' => 'settings-modal'}
+            li = link_to "Logout", logout_path, :method => :delete
+
           - else
             li = link_to "Sign up", signup_path
             li = link_to "Login", login_path
@@ -36,10 +37,10 @@ html lang="en"
           = alert_box alert, "alert"
           = alert_box notice
           = yield
-  div id="settings-modal" class="reveal-modal" data-reveal=true
-    == render :partial => 'users/settings'
+  #settings-modal.reveal-modal.medium data-reveal=true
+    = render :partial => 'users/settings'
     .close-reveal-modal
-      =="&#215;"
+      == "&#215;"
 
 
     = javascript_include_tag "application"
