--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,9 +18,11 @@ html lang="en"
       .medium-2.columns
         ul.main-nav
           li = link_to "Home", root_path
-          li = link_to "Add a Book", new_book_path
-          li.divider
           - if current_user
+            - if current_user.admin
+              li = link_to "Add a Book", new_book_path
+              li = link_to "Admin_Books", admin_books_path
+            li.divider
             li = link_to "Logged in as #{current_user.name}", "#"
             li = link_to "Logout", logout_path, :method => :delete
           - else
