working on simple_form_for

--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -3,6 +3,7 @@
     h1 Sign up as a new user
     = simple_form_for @user do |f|
       = f.input :name
+      =f.input :email_update
       = f.input :email do
         = f.input_field :email, type: :email, class: "mailcheck"
         = f.hint "Must be a valid email", style: "display: none"
