--- a/app/views/books/tags.html.slim
+++ b/app/views/books/tags.html.slim
@@ -1,6 +1,6 @@
 .row
   .large-12.columns
     h2
-      | Books tagged with "#{@tag}"
+      = t('.books_tagged_with'), tag: @tagBooks tagged with "#{@tag}"
       span< = favorite_link_to @tag
     = render 'books', :books => @books
