--- a/app/views/books/_edit_tags_form.html.slim
+++ b/app/views/books/_edit_tags_form.html.slim
@@ -1,4 +1,4 @@
 = form_tag edit_tags_book_path(@book), method: 'patch', id: 'edit-tags-form'
   = text_field_tag :user_tags, @book.tags_from(current_user)
-  small.hint Separate tags with commas.
-  = submit_tag "Update tag list", class: 'button'
+  small.hint = t('.tags_hint')
+  = submit_tag t('.update_tags'), class: 'button'
