--- a/app/views/books/_tag_list.html.slim
+++ b/app/views/books/_tag_list.html.slim
@@ -1,4 +1,4 @@
 - book.tags.each do |tag|
   span.secondary.radius.label>
     = link_to tag, tag_books_path(tag.name)
-= edit_tag_link_to(book)
+= book_edit_tag_link_to(book) if current_user
