--- a/app/views/tag_mailer/new_tag_alert.html.erb
+++ b/app/views/tag_mailer/new_tag_alert.html.erb
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-<h1>Cool news: a book with one of your favorited tags, <%= @tag.name %> has just been added to Freeshelf.</h1>
+<h1>Cool news: a book with one of your favorited tags, <%= @tag %> has just been added to Freeshelf.</h1>
 <p>
   You can click on this link to go straight to it: <%= @url %>.
 </p>
