--- a/app/views/tag_mailer/new_tag_alert.text.erb
+++ b/app/views/tag_mailer/new_tag_alert.text.erb
@@ -1,4 +1,4 @@
-Cool news: a book with one of your favorited tags, <%= @tag.name %> has just been added to Freeshelf.
+Cool news: a book with one of your favorited tags, <%= @tag %> has just been added to Freeshelf.
 ======================================================================================================
 You can click on this link to go straight to it: <%= @url %>.
 
