--- a/app/views/users/_settings.html.slim
+++ b/app/views/users/_settings.html.slim
@@ -1,5 +1,6 @@
 h3 Settings
-p Add settings here
-= simple_form_for @current_user  do |f|
-  = f.input :name
-  = f.button :submit
+p Sign up for an email when a book tagged with one of your favorite tags gets added
+-if current_user != nil
+  = simple_form_for @current_user  do |f|
+    = f.input :email_update
+    = f.button :submit
