--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -24,7 +24,7 @@ html lang="en"
 
           li.divider
           - if current_user
-            li = link_to "Logged in as #{current_user.name}", "#"
+            li = link_to "Logged in as #{current_user.name}", edit_user_path(current_user.id)
             li = link_to "Settings", '#', data: {:'reveal-id' => 'settings-modal'}
             li = link_to "Logout", logout_path, :method => :delete
 
