--- a/app/views/videos/edit.html.slim
+++ b/app/views/videos/edit.html.slim
@@ -1,6 +1,6 @@
 h1
-  | Editing video
+  = t('.edit')
 = render 'form'
-= link_to 'Show', @video
-|  | 
-= link_to 'Back', videos_path
+= link_to t('.show'), @video
+|  |
+= link_to t('.back'), videos_path
