--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,18 +1,18 @@
 .row
   .large-12.columns
-    h1 = t('.title') 
+    h1 Sign up as a new user
     = simple_form_for @user do |f|
       = f.input :name, label: t('.name')
       = f.input :email do
         = f.input_field :email, type: :email, class: "mailcheck"
-        = f.hint t('.email_hint'), style: "display: none"
+        = f.hint "Must be a valid email", style: "display: none"
       .row
         .medium-6.columns
-          = f.input :password, t('.password')
+          = f.input :password, label: t('.password')
         .medium-6.columns
-          = f.input :password_confirmation, t('.password_confirmation')
-      .row
+          = f.input :password_confirmation, label: t('.password_confirmation')
+      .row    
         .medium-6.columns
           = f.label :locale, t('.language')
-          = f.select :locale, [["English", "en"], ["Español", "es"]] 
-      = f.button :submit t('.submit')
+          = f.select :locale, [["English", "en"], ["Español", "es"]]
+      = f.button :submit
