Fixed account_verification welcome page to display the user's name.

--- a/app/views/email_confirmation/welcome.html.slim
+++ b/app/views/email_confirmation/welcome.html.slim
@@ -1,2 +1,4 @@
-h1 Thanks for joining Freeshelf @user.name
+h1
+  'Thanks for joining Freeshelf
+  = @user.name
 = link_to "Enter Freeshelf", root_url
