--- a/app/views/users/change_password.html.slim
+++ b/app/views/users/change_password.html.slim
@@ -1,7 +1,7 @@
 .row
   .large-12.columns
     h1 Change Password
-    = simple_form_for @user do |f|
+    = simple_form_for @user, url: change_password_update_path(@user), method: :patch do |f|
       .medium-6.columns
         = f.input :password
       .medium-6.columns
