--- a/app/views/books/_form.html.slim
+++ b/app/views/books/_form.html.slim
@@ -2,18 +2,18 @@
   = form.input :title
   = form.input :creator
   = form.input :url
-  = form.input :year_created, label: t('.publish_year')
-  = label_tag t('.tag_list')
+  = form.input :year_created
+  = label_tag :user_tags
   = text_field_tag :user_tags, @book.tags_from(current_user)
   small.hint = t('.tags_hint')
-  = form.input :description, input_html: {rows: 10}, label: t('.description')
+  = form.input :description, input_html: {rows: 10}
   .row
     .medium-6.columns
-      = form.input :cover, :as => :file, label: t('.cover')
+      = form.input :cover, :as => :file
       = form.input :cover_cache, :as => :hidden
       = form.input :remote_cover_url, :as => :text
     .medium-6.columns
       = image_tag(book.cover_url) if book.cover?
 
-  = form.button :submit, label: t('.submit'), model: Book.model_name.human
+  = form.button :submit
 
