--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -24,11 +24,11 @@ html lang="en"
 
           li.divider
           - if current_user
-            li = link_to "Favorite Books", favorite_path(current_user.id)
+            li = link_to t('.favorite_books'), favorite_path(current_user.id)
             li.divider
-            li = link_to "Logged in as #{current_user.name}", "#"
-            li = link_to "Settings", '#', data: {:'reveal-id' => 'settings-modal'}
-            li = link_to "Logout", logout_path, :method => :delete
+            li = link_to t('.logged_as', name: current_user.name), "#"
+            li = link_to t('.settings'), '#', data: {:'reveal-id' => 'settings-modal'}
+            li = link_to t('.logout'), logout_path, :method => :delete
 
           - else
             li = link_to t('.signup'), signup_path
