--- a/app/views/users/_settings.html.slim
+++ b/app/views/users/_settings.html.slim
@@ -1,6 +1,6 @@
 h3 = t('.settings')
-p Sign up for an email when a book tagged with one of your favorite tags gets added
+p = t('.email_sign_up') 
 -if current_user != nil
-  = simple_form_for @current_user  do |f|
+  = simple_form_for @current_user do |f|
     = f.input :email_update
     = f.button :submit
